Bug fix: footer would disappear behind the update dish form, fixed the css.

--- a/oComponents/DishPage/DishPage.module.css
+++ b/oComponents/DishPage/DishPage.module.css
@@ -1,3 +1,8 @@
+.buttonContainer {
+  display: block !important;
+  margin-bottom: 50px;
+}
+
 .buttonDelete {
   float: right !important;
   width: 35% !important;
